--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,19 +1,17 @@
-*{
-    margin: 0;
-    padding: 0;
+body {
+  background: linear-gradient(
+    180deg,
+    rgba(201, 241, 255, 0.5) 0%,
+    rgba(166, 227, 246, 0.5) 100%
+  );
+  height: 100vh;
 }
 
-.logo {
-  position: absolute;
-  width: 90px;
-  height: 90px;
-}
-
-.navbar{
-    display: flex;
-    justify-content: space-between;
-}
-
-ul{
-    text-decoration: none;
+.signupForm {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
