--- a/CSS/signUp.css
+++ b/CSS/signUp.css
@@ -16,6 +16,11 @@ body {
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
   }
+
+.container h2 {
+  margin-left: -18px; /* Adjust this value to reduce the gap */ 
+  font-size: 30px;
+}
   
   .nav-link::after {
     content: '';
