--- a/CSS/bmi.css
+++ b/CSS/bmi.css
@@ -21,7 +21,6 @@ body {
   .container {
     width: 100%;
     height: 100%;
-    padding: 20px;
   }
   .image-container {
     display: flex;
@@ -30,14 +29,11 @@ body {
     position: relative;
   }
   .glassmorphic-box {
-    align-items: center;
-    margin-top: 100px;
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
     border-radius: 40px;
     padding: 10px 30px 50px 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
- 
   }
 
 .image-container .col-3, .image-container .col-5 {
@@ -98,12 +94,10 @@ input[type="number"]::-moz-outer-spin-button {
 }
 
 .right-side {
-  width: 400px; /* Adjust width as needed */
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  position: relative; /* Set position to relative */
-  left: calc(100% - 350px);
+  width: 350px;
+  float: right;
+  margin-right: -400px;
+  margin-left: 150px;
 
 }
 
