--- a/CSS/login.css
+++ b/CSS/login.css
@@ -5,7 +5,7 @@ body {
       rgba(166, 227, 246, 0.5) 100%
     );
     height: 100vh;
-    /* overflow: hidden; */
+    overflow: hidden;
   }
   
   .loginForm {
