--- a/CSS/History.css
+++ b/CSS/History.css
@@ -4,10 +4,13 @@ body {
       rgba(201, 241, 255, 0.5) 0%,
       rgba(166, 227, 246, 0.5) 100%
     );
-    padding-bottom: 100px;
-  }
+}
+
+h2 {
+  font-size: 30px;
+}
   
-  .nav-link::after {
+.nav-link::after {
     content: '';
     width: 0%;
     height: 2px;
@@ -15,7 +18,7 @@ body {
     display: block;
     margin: auto;
     transition: 0.5s;
-  }
+}
   
   .nav-link:hover:after {
     width: 100%;
@@ -25,14 +28,6 @@ body {
     margin-left: -18px; /* Adjust this value to reduce the gap */
   }
   
-  .Login-button {
-    background-color: rgba(36, 102, 255, 1);
-    font-size: 14px;
-    padding: 8px 20px;
-    border-radius: 50px;
-    color: #fff;
-    text-decoration: none;
-  }
   
   .bttn {
     background-color: rgba(36, 102, 255, 1);
@@ -113,19 +108,14 @@ body {
     color: #2d7fd6;
     text-decoration: none;
     align-self: flex-end;
-  }
+}
   
-  .view-more-button:hover {
+.view-more-button:hover {
     color: #0056b3;
-  }
+}
   
   h3 {
     font-family: 'Roboto Mono', monospace;
     font-size: 25px;
     font-weight: bold;
-  }
-  
-  .Footer {
-    height: 200px; /* Adjust height as needed */
-  }
-  
+}
