--- a/CSS/Medicine.css
+++ b/CSS/Medicine.css
@@ -22,36 +22,16 @@ header {
   width: 100%;
 }
 
-
 .container h2 {
-  margin-left: -18px; /* Adjust this value to reduce the gap */ 
+  margin-left: -18px; /* Reduce gap betweeen logo and Vcare */ 
 }
 
 h1 {
-  font-size: 77px;
-}
-p {
-  font-size: 30px;
-}
-
-.col-sm-6 img {
-  margin-top: 50px;
-}
-.bttn {
-  background-color:rgba(36, 102, 255, 1);
-  font-size: 20px;
-  color: #fff;
-  box-shadow: 0 8px 10px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
-}
-.hero-img {
-  width: 750px;
+  font-size: 50px;  /* Font size of Word Medicine in containe with bg image */
 }
 
 h2 {
-  font-size: 45px;
+  font-size: 30px;
 }
 
 span {
@@ -64,10 +44,10 @@ span {
 }
 
 .Medicine {
-  background-color: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.7);
   height: 80%;
   box-shadow: 3px 5px 15px #333;     /* Can be given in main class of Medicine Class. Foor jastai daykhay ra yata css dayko*/
-}
-.Our-service{
-  background-color: #fff;
+  background-image: url(/Images/medicineimg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
