--- a/CSS/Medicine.css
+++ b/CSS/Medicine.css
@@ -23,11 +23,7 @@ header {
 }
 
 .container h2 {
-  margin-left: -18px; /* Reduce gap betweeen logo and Vcare */ 
-}
-
-h1 {
-  font-size: 50px;  /* Font size of Word Medicine in containe with bg image */
+  margin-left: -18px; /* Adjust this value to reduce the gap */ 
 }
 
 h2 {
