--- a/CSS/appointment.css
+++ b/CSS/appointment.css
@@ -8,6 +8,12 @@ body {
 header {
   height: 100vh;
 }
+
+.navbar{
+  font-family: "Taviraj", serif;
+  font-weight: 200;
+  font-style: normal;
+}
 .nav-link::after {
   content: '';
   width: 0%;
@@ -39,9 +45,30 @@ span {
   height: 200px;
   background-color: #333;
 }
-
+.text-center{
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+.B{
+  font-size: 60px;
+}
 .Appoinment {
   background: rgba(255, 255, 255, 0.7);
   height: 80%;
   box-shadow: 3px 5px 15px #333;     /* Can be given in main class of Medicine Class. Foor jastai daykhay ra yata css dayko*/
+  background-repeat: no-repeat;
+  background-image: url(/Images/Doctors/Ba-bg.jpg);
+  background-size: cover;
+}
+.card-title{
+  font-size: 25px;
+  font-family: "Mukta Vaani", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.card-text{
+  font-family: "Poppins", sans-serif;
+  font-weight: 150;
 }
