--- a/CSS/About.css
+++ b/CSS/About.css
@@ -1,15 +1,13 @@
-body {
-    /* background: linear-gradient(
-      180deg,
-      rgba(201, 241, 255, 0.5) 0%,
-      rgba(166, 227, 246, 0.5) 100%
-    ); */
-    
-}
 header {
     height: 100vh;
     /* overflow: hidden; */
-  }
+}
+
+.navbar{
+    font-family: "Taviraj", serif;
+    font-style: normal;
+}
+
 .nav-link::after {
     content: "";
     width: 0%;
@@ -31,14 +29,27 @@ header {
     background:  #e5e3f745;
     height: 30%;
 }
+.About-Us{
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 400;
+    font-size: 60px;
+    font-style: normal;
+}
 .Our-Vision{
     margin-top: 70px;
    margin-left: 150px;
    line-height: 30px;
 }
+.Our-Vision h1{
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    text-decoration: underline #b396bd29;
+} 
 .card{
     border: none;
 }
 .Our-Story{
     margin-top: 60px;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
 }
